@@ -1,127 +1,82 @@
 package io.github._0xorigin.queryfilterbuilder.operators;
 
-import io.github._0xorigin.queryfilterbuilder.base.ErrorWrapper;
+import io.github._0xorigin.queryfilterbuilder.base.filteroperator.Operator;
+import io.github._0xorigin.queryfilterbuilder.base.wrappers.FilterErrorWrapper;
 import jakarta.persistence.criteria.CriteriaBuilder;
-import jakarta.persistence.criteria.Path;
+import jakarta.persistence.criteria.Expression;
 import jakarta.persistence.criteria.Predicate;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.validation.BindingResult;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class IsNullTest {
 
     @Mock
-    private Path<?> path;
-
-    @Mock
     private CriteriaBuilder criteriaBuilder;
-
-    @Mock
-    private ErrorWrapper errorWrapper;
 
     @Mock
     private Predicate predicate;
 
-    private IsNull isNullOperator;
+    @Mock
+    private FilterErrorWrapper filterErrorWrapper;
 
-    @BeforeEach
-    void setUp() {
-        isNullOperator = new IsNull();
+    @Mock
+    private BindingResult bindingResult;
+
+    @InjectMocks
+    private IsNull isNull;
+
+    @Test
+    void apply_validListWithTrueValue_returnsIsNullPredicate() {
+        List<String> values = List.of("true");
+        Expression<String> expression = mock(Expression.class);
+        when(criteriaBuilder.isNull(expression)).thenReturn(predicate);
+
+        Optional<Predicate> result = isNull.apply(expression, criteriaBuilder, values, filterErrorWrapper);
+
+        assertThat(result).isPresent().contains(predicate);
+        verify(criteriaBuilder).isNull(expression);
+        verifyNoMoreInteractions(criteriaBuilder);
+        verifyNoInteractions(bindingResult);
     }
 
     @Test
-    void apply_WithTrueValue_ShouldCreateIsNullPredicate() {
-        // Arrange
-        List<Boolean> values = Collections.singletonList(true);
-        when(criteriaBuilder.isNull(path)).thenReturn(predicate);
+    void apply_validListWithFalseValue_returnsIsNotNullPredicate() {
+        List<String> values = List.of("false");
+        Expression<String> expression = mock(Expression.class);
+        when(criteriaBuilder.isNotNull(expression)).thenReturn(predicate);
 
-        // Act
-        isNullOperator.apply(path, criteriaBuilder, values, errorWrapper);
+        Optional<Predicate> result = isNull.apply(expression, criteriaBuilder, values, filterErrorWrapper);
 
-        // Assert
-        verify(criteriaBuilder).isNull(path);
-        verify(criteriaBuilder, never()).isNotNull(any());
+        assertThat(result).isPresent().contains(predicate);
+        verify(criteriaBuilder).isNotNull(expression);
+        verifyNoMoreInteractions(criteriaBuilder);
+        verifyNoInteractions(bindingResult);
     }
 
     @Test
-    void apply_WithFalseValue_ShouldCreateIsNotNullPredicate() {
-        // Arrange
-        List<Boolean> values = Collections.singletonList(false);
-        when(criteriaBuilder.isNotNull(path)).thenReturn(predicate);
+    void apply_invalidList_returnsEmptyOptional() {
+        List<String> values = List.of();
+        Expression<String> expression = mock(Expression.class);
 
-        // Act
-        isNullOperator.apply(path, criteriaBuilder, values, errorWrapper);
+        Optional<Predicate> result = isNull.apply(expression, criteriaBuilder, values, filterErrorWrapper);
 
-        // Assert
-        verify(criteriaBuilder).isNotNull(path);
-        verify(criteriaBuilder, never()).isNull(any());
+        assertThat(result).isEmpty();
+        verifyNoInteractions(criteriaBuilder, bindingResult);
     }
 
     @Test
-    void apply_WithEmptyList_ShouldReturnConjunction() {
-        // Arrange
-        List<?> emptyList = Collections.emptyList();
-        when(criteriaBuilder.conjunction()).thenReturn(predicate);
-
-        // Act
-        isNullOperator.apply(path, criteriaBuilder, emptyList, errorWrapper);
-
-        // Assert
-        verify(criteriaBuilder).conjunction();
-        verify(criteriaBuilder, never()).isNull(any());
-        verify(criteriaBuilder, never()).isNotNull(any());
+    void getOperatorConstant_returnsIsNullOperator() {
+        assertThat(isNull.getOperatorConstant()).isEqualTo(Operator.IS_NULL);
     }
-
-    @Test
-    void apply_WithNullValue_ShouldReturnConjunction() {
-        // Arrange
-        List<?> listWithNull = Collections.singletonList(null);
-        when(criteriaBuilder.conjunction()).thenReturn(predicate);
-
-        // Act
-        isNullOperator.apply(path, criteriaBuilder, listWithNull, errorWrapper);
-
-        // Assert
-        verify(criteriaBuilder).conjunction();
-        verify(criteriaBuilder, never()).isNull(any());
-        verify(criteriaBuilder, never()).isNotNull(any());
-    }
-
-    @Test
-    void apply_WithMultipleValues_ShouldUseFirstValue() {
-        // Arrange
-        List<Boolean> values = Arrays.asList(true, false, true);
-        when(criteriaBuilder.isNull(path)).thenReturn(predicate);
-
-        // Act
-        isNullOperator.apply(path, criteriaBuilder, values, errorWrapper);
-
-        // Assert
-        verify(criteriaBuilder).isNull(path);
-        verify(criteriaBuilder, never()).isNotNull(any());
-    }
-
-    @Test
-    void apply_WithMultipleMixedValues_ShouldUseFirstValue() {
-        // Arrange
-        List<Boolean> values = Arrays.asList(false, true, false);
-        when(criteriaBuilder.isNotNull(path)).thenReturn(predicate);
-
-        // Act
-        isNullOperator.apply(path, criteriaBuilder, values, errorWrapper);
-
-        // Assert
-        verify(criteriaBuilder).isNotNull(path);
-        verify(criteriaBuilder, never()).isNull(any());
-    }
-
 }
